--- a/Play.html
+++ b/Play.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/custom5.css"/>
     <link rel="stylesheet" href="css/custom4.css"/>
     <link rel="stylesheet" href="css/header.css"/>
+    <link rel="stylesheet" href="css/footer.css"/>
 </head>
 <body>
 <header class="header">
@@ -484,6 +485,15 @@
         </div>
     </div>
 </section>
-
+<footer class="footer">
+    <div class="container">
+        <div class="copyright">
+            <span class="z-logo"></span>
+            <div class="z-license-info">
+                <div class="z-copyright">A Product By T2004E-FPT APTECH</div>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
